# tiago_navigation

./: stack.xml
ant_2dnav/: CMakeLists.txt  package.xml
ant_2dnav/config/base/: navigation.rviz
ant_2dnav/config/localization/: amcl.yaml
ant_2dnav/config/mapping/: gmapping.yaml  karto.yaml  mapping.rviz
ant_2dnav/config/rviz/: navigation.rviz
ant_2dnav/config/state_machine/: state_machine.yaml
ant_2dnav/launch/: localization.launch  localization_amcl.launch  localization_fake.launch  mapping.launch  mapping_gmapping.launch  mapping_karto.launch  move_base.launch  move_by.launch  move_by_unsafe.launch  navigation.launch  state_machine.launch
ant_2dnav/scripts/: record_move_base.sh
ant_maps/: CMakeLists.txt  package.xml
ant_maps/configurations/benito_sports/: map.yaml  submap_0.pgm  transformation.yaml
ant_maps/configurations/pal_office/: mmap.yaml  submap_0.pgm
ant_maps/configurations/pal_office_ant/: transformation.xml
ant_maps/configurations/pujades/: mmap.yaml
ant_maps/configurations/rockin_camp/: map.pgm
ant_maps/configurations/russian_restaurant/: submap_0.pgm
ant_maps/configurations/small_office/: map.yaml  mmap.yaml
ant_maps/configurations/upf_library/: map.yaml  mmap.yaml  transformation.xml
ant_nav_cont_test/: CMakeLists.txt  package.xml
ant_nav_cont_test/include/ant_nav_cont_test/: NavActClientReporter.h
ant_nav_cont_test/launch/: ant_nav_cont_test.launch
ant_nav_cont_test/src/: NavActClientReporter.cpp  NavActClientReporterTest.cpp
ant_navigation/: CMakeLists.txt  package.xml
ant_rgbd_sensors/: CMakeLists.txt  package.xml
ant_rgbd_sensors/config/: softkinetic_camera_ds311.yaml  xtion_pro_live.yaml  xtion_pro_live_calibration.yaml
ant_rgbd_sensors/launch/: base_rgbd.launch  rgbd.launch  softkinetic_camera_ds311.launch  xtion_pro_live.launch
reem_2dnav/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
reem_2dnav/config/: acceleration_limits.yaml  costmap_common_params.yaml  footprint.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  pal_local_planner_params.yaml  recovery_behaviors.yaml
reem_2dnav/config/base/: navigation.rviz
reem_2dnav/config/by/: navigation.rviz
reem_2dnav/config/localization/: amcl.yaml
reem_2dnav/config/mapping/: gmapping.yaml  karto.yaml  mapping.rviz  mapping.vcg
reem_2dnav/config/state_machine/: state_machine.yaml
reem_2dnav/launch/: amcl_diff.launch  emergency_stop.launch  localization.launch  localization_amcl.launch  localization_fake.launch  mapping.launch  mapping_gmapping.launch  mapping_karto.launch  move_base.launch  move_base_callgrind.launch  move_by.launch  move_by_unsafe.launch  navigation.launch  planning_and_control.launch  simulation.launch  state_machine.launch  teleop.launch  throttle.launch
reem_laser_sensors/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
reem_laser_sensors/config/: base_laser_cloud_filter.yaml  base_laser_filter.yaml  base_laser_scan_filter.yaml  self_filter.yaml  upper_laser_filter.yaml
reem_laser_sensors/launch/: base_laser.launch  base_laser_filter.launch  hokuyo_laser.launch  laser.launch  laser_filter.launch  throttle.launch  torso_laser.launch  upper_laser.launch  upper_laser_filter.launch  upper_self_laser_filter.launch
reem_maps/: CMakeLists.txt  config  mainpage.dox  manifest.xml  package.xml
reem_maps/config/: map_0.xml  poi.yaml  subMap1.pgm  subMap1.yaml
reem_maps/configurations/pal_office/: submap_0.orig.pgm
reem_maps/configurations/pre_show/: map.yaml  transformation.xml
reem_maps/configurations/pujades/: map.pgm  map.yaml  mmap.yaml  poi.yaml  transformation.xml
reem_maps/launch/: map.launch
reem_maps/scripts/: map_setup.py  poi_manager.py  update_map_symlink.sh
reem_nav_cont_test/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
reem_nav_cont_test/launch/: reem_nav_cont_test.launch
reem_nav_cont_test/src/: LocalizerReporter.cpp  NavActClientReporter.cpp  NavActClientReporterTest.cpp  main.cpp
reem_navigation/: CMakeLists.txt  package.xml
tiago_2dnav/: CHANGELOG.rst  CMakeLists.txt  package.xml
tiago_2dnav/launch/: localization.launch  localization_amcl.launch  localization_fake.launch  mapping.launch  mapping_gmapping.launch  mapping_karto.launch  move_base.launch  move_by.launch  move_by_unsafe.launch  navigation.launch  state_machine.launch  tiago_nav_bringup.launch.py  tiago_sim_nav_bringup.launch.py
tiago_2dnav/params/: tiago_nav.yaml  tiago_nav_public_sim.yaml  tiago_nav_w_composition.yaml  tiago_remappings.yaml  tiago_remappings_sim.yaml
tiago_2dnav/scripts/: navigation_camera_mgr.py
tiago_laser_sensors/: CHANGELOG.rst  CMakeLists.txt  package.xml
tiago_laser_sensors/config/: hokuyo_urg_04lx_ug01_laser.yaml  hokuyo_urg_04lx_ug01_laser_omni.yaml  laser_filter.yaml  rgbd_cloud_laser.yaml  rgbd_depth_laser.yaml  sick_tim551_laser.yaml  sick_tim561_laser.yaml  sick_tim561_laser_omni.yaml  sick_tim571_laser.yaml  sick_tim571_laser_omni.yaml  ydlidar-tg15_filter.yaml  ydlidar-tg30_filter.yaml  ydlidar_tg15_laser.yaml  ydlidar_tg30_laser.yaml
tiago_laser_sensors/launch/: base_laser.launch  hokuyo_laser.launch  hokuyo_urg_04lx_ug01_laser.launch  laser.launch  laser.launch.py  laser_doctor.launch  rebujito_laser.launch  rgbd_cloud_laser.launch  rgbd_depth_laser.launch  sick-551_laser.launch  sick-561_laser.launch  sick-571_laser.launch  sick_tim551_laser.launch  sick_tim561_laser.launch  sick_tim571_laser.launch  ydlidar-tg15_laser.launch  ydlidar-tg30_laser.launch
tiago_laser_sensors/module/: laser.yaml
tiago_maps/: CHANGELOG.rst  CMakeLists.txt  building.yaml  building_description.yaml  config  package.xml
tiago_navigation/: CHANGELOG.rst  CMakeLists.txt  package.xml
tiago_rgbd_sensors/: CHANGELOG.rst  CMakeLists.txt  package.xml
tiago_rgbd_sensors/config/: roof_floor_filter_xtion.yaml  xtion_pro_live.yaml  xtion_pro_live_calibration.yaml
tiago_rgbd_sensors/launch/: base_rgbd.launch  rgbd.launch  rgbd_orbbec-astra.launch  roof_xtion.launch  softkinetic_camera_ds311.launch  xtion_pro_live.launch
(+123 files in other folders)
