<?xml version="1.0"?>
<package>
  <name>ant_2dnav</name>
  <version>0.9.0</version>
  <description>ANT-specific launch files needed to run
    navigation on the ANT robot.</description>
  <maintainer email="enrique.fernandez@pal-robotics.com">Enrique Fernandez</maintainer>
  <license>Modified BSD</license>
  <author email="enrique.fernandez@pal-robotics.com">Enrique Fernandez</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>amcl</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>pal_karto</run_depend>
  <run_depend>pal_vo_server</run_depend>
  <run_depend>pal_navigation_sm</run_depend>
</package>
