<?xml version="1.0"?>
<package>
  <name>ant_maps</name>
  <version>0.9.0</version>
  <description>ANT-specific maps and launch files.</description>
  <maintainer email="enrique.fernandez@pal-robotics.com">Enrique Fernandez</maintainer>
  <license>Modified BSD</license>
  <author email="enrique.fernandez@pal-robotics.com">Enrique Fernandez</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>map_server</run_depend>
</package>
