<?xml version="1.0"?>
<package>
  <name>ant_nav_cont_test</name>
  <version>0.9.0</version>
  <description>ANT navigation continuous tests.</description>

  <maintainer email="enrique.fernandez@pal-robotics.com">Enrique Fernandez</maintainer>
  <author email="enrique.fernandez@pal-robotics.com">Enrique Fernandez</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pal_core</build_depend>
  <build_depend>pal_navigation_client</build_depend>

  <run_depend>pal_core</run_depend>
  <run_depend>pal_navigation_client</run_depend>
</package>
