<?xml version="1.0"?>
<package>
  <name>reem_2dnav</name>
  <version>0.9.0</version>
  <description>REEM-specific launch files needed to run
    navigation on the REEM robot.</description>
  <maintainer email="luca.marchionni@pal-robotics.com">Luca Marchionni</maintainer>
  <maintainer email="paul.mathieu@pal-robotics.com">Paul Mathieu</maintainer>
  <license>Modified BSD</license>
  <author email="luca.marchionni@pal-robotics.com">Luca Marchionni</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>amcl</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>pal_vo_server</run_depend>
</package>
