<?xml version="1.0"?>
<package>
  <name>reem_laser_sensors</name>
  <version>0.9.0</version>
  <description>REEM-specific laser sensors launch and config files.</description>
  <maintainer email="luca.marchionni@pal-robotics.com">Luca Marchionni</maintainer>
  <license>Modified BSD</license>
  <author email="luca.marchionni@pal-robotics.com">Luca Marchionni</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>laser_filters</run_depend>
  <run_depend>hokuyo_node</run_depend>
  <run_depend>LMS1xx</run_depend>
</package>
