<?xml version="1.0"?>
<package>
  <name>reem_navigation</name>
  <version>0.9.0</version>
  <description>REEM navigation metapackage</description>
  <maintainer email="enrique.fernandez@pal-robotics.com">Enrique Fernandez</maintainer>
  <maintainer email="paul.mathieu@pal-robotics.com">Paul Mathieu</maintainer>
  <license>BSD</license>
  <author email="enrique.fernandez@pal-robotics.com">Enrique Fernandez</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>reem_2dnav</run_depend>
  <run_depend>reem_maps</run_depend>
  <!--run_depend>reem_laser_sensors</run_depend-->
  <!--run_depend>reem_nav_cont_test</run_depend-->

  <export>
    <metapackage/>
  </export>
</package>
