<?xml version="1.0"?>
<package format="3">
  <name>tiago_2dnav</name>
  <version>4.0.9</version>
  <description>TIAGo-specific launch files needed to run navigation on a TIAGo robot.</description>
  <maintainer email="jordan.palacios@pal-robotics.com">Jordan Palacios</maintainer>
  <maintainer email="noel.jimenez@pal-robotics.com">Noel Jimenez</maintainer>
  <license>Apache License 2.0</license>
  <author email="enrique.fernandez@pal-robotics.com">Enrique Fernandez</author>

  <url type="website">https://github.com/pal-robotics/tiago_simulation</url>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>launch_pal</exec_depend>
  <exec_depend>pmb2_2dnav</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
