<?xml version="1.0"?>
<package format="3">
  <name>tiago_2dnav</name>
  <version>4.0.12</version>
  <description>TIAGo-specific launch files needed to run navigation on a TIAGo robot.</description>
  <maintainer email="jordan.palacios@pal-robotics.com">Jordan Palacios</maintainer>
  <maintainer email="noel.jimenez@pal-robotics.com">Noel Jimenez</maintainer>
  <license>Apache License 2.0</license>
  <author email="enrique.fernandez@pal-robotics.com">Enrique Fernandez</author>

  <url type="website">https://github.com/pal-robotics/tiago_simulation</url>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>launch_pal</exec_depend>
  <exec_depend>pmb2_maps</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend condition="$PAL_DISTRO > 0">pal_nav2_bringup</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
