<?xml version="1.0"?>
<package>
  <name>tiago_laser_sensors</name>
  <version>2.1.18</version>
  <description>TiaGo-specific laser sensors launch and config files.</description>
  <maintainer email="jeremie.deray@pal-robotics.com">Jeremie Deray</maintainer>
  <license>Modified BSD</license>
  <author email="enrique.fernandez@pal-robotics.com">Enrique Fernandez</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>hokuyo_node</run_depend>
  <run_depend>sick_tim</run_depend>
  <run_depend>ydlidar_ros_driver</run_depend>
  <run_depend>laser_filters</run_depend>
  <run_depend>pal_filters</run_depend>
  <run_depend>ira_laser_tools</run_depend>
</package>
