<?xml version="1.0"?>
<package>
  <name>tiago_navigation</name>
  <version>0.9.3</version>
  <description>TiaGo navigation metapackage</description>
  <maintainer email="enrique.fernandez@pal-robotics.com">Enrique Fernandez</maintainer>
  <license>BSD</license>
  <author email="enrique.fernandez@pal-robotics.com">Enrique Fernandez</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>tiago_2dnav</run_depend>
  <run_depend>tiago_maps</run_depend>
  <run_depend>tiago_laser_sensors</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
