<?xml version="1.0"?>
<package format="2">
  <name>tiago_navigation</name>
  <version>2.0.6</version>
  <description>TIAGo navigation metapackage</description>
  <maintainer email="federico.nardi@pal-robotics.com">Federico Nardi</maintainer>
  <license>Apache License 2.0</license>
  <author email="enrique.fernandez@pal-robotics.com">Enrique Fernandez</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>tiago_2dnav</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
