<?xml version="1.0"?>
<package format="3">
  <name>tiago_navigation</name>
  <version>4.0.12</version>
  <description>TIAGo navigation metapackage</description>
  <maintainer email="jordan.palacios@pal-robotics.com">Jordan Palacios</maintainer>
  <maintainer email="noel.jimenez@pal-robotics.com">Noel Jimenez</maintainer>
  <license>Apache License 2.0</license>
  <author email="enrique.fernandez@pal-robotics.com">Enrique Fernandez</author>

  <url type="website">https://github.com/pal-robotics/tiago_simulation</url>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>tiago_2dnav</exec_depend>
  <exec_depend>tiago_laser_sensors</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
